--- a/0-teste/style.css
+++ b/0-teste/style.css
@@ -106,6 +106,15 @@ section {
 #sobre {
   background-color: cadetblue;
 }
+.container div {
+  margin: 10px;
+}
+.container div img{
+  /* padding-top: 50px; */
+  /* padding-right: 10px; */
+ border-radius: 100%;
+ border: 1px solid black;
+}
 .sobre-texto div {
   text-align: start;
 }
