--- a/0-teste/portifolio3/css/styles.css
+++ b/0-teste/portifolio3/css/styles.css
@@ -20,7 +20,7 @@
   background-size: cover;
   height: 85vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   color: var(--text-color);
 }
