--- a/4-portifolio/portifolio3/css/styles.css
+++ b/4-portifolio/portifolio3/css/styles.css
@@ -13,8 +13,8 @@
   padding: 0;
 }
 
-/* Event form */
-#event-subscription {
+/* Introduction */
+#introduction-section {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("../img/milad-fakurian-E8Ufcyxz514-unsplash.jpg");
   background-position: center;
@@ -27,17 +27,17 @@
   color: var(--text-color);
 }
 
-#disclaimer h2,
-#disclaimer .event-date {
+#about h2,
+#about .event-notion {
   color: var(--primary);
 }
 
-#disclaimer h2 {
+#about h2 {
   font-size: 3em;
   margin-bottom: 1em;
 }
 
-#disclaimer .about-event {
+#about .about-me {
   font-size: 2em;
   text-transform: uppercase;
   max-width: 450px;
@@ -45,16 +45,16 @@
   margin-bottom: 1em;
 }
 
-#disclaimer p {
+#about p {
   font-size: 1.2em;
   margin-bottom: 0.3em;
 }
 
-#disclaimer .event-date {
+#about .event-notion {
   font-weight: bold;
 }
 
-#subscription-form {
+/* #subscription-form {
   background-color: var(--secondary);
   padding: 1em;
   max-width: 22%;
@@ -64,7 +64,7 @@
   font-size: 1.5em;
   color: var(--text-secondary);
   margin-bottom: 1em;
-}
+} */
 
 .form-group {
   display: flex;
@@ -96,36 +96,36 @@
   cursor: pointer;
   opacity: 0.8;
 }
-.visit{
+.btn-group{
   /* background-color: red; */
   margin: 15px;
   /* padding-top: 500px; */
 }
-.visit .btn{
+.btn-group .btn{
   display: block;
   /* width: 100%; */
   text-align: center;
   text-decoration: none;
 }
-.atalho{
+.btn-about{
   display: flex;justify-content: space-around;
 }
-.atalho div{
+.btn-about div{
   width: 40%;
 }
 .btn:hover {
   opacity: 1;
 }
 
-/* Benefits section */
-#key-benefits h2 {
+/* technologies section */
+#some-working h2 {
   background-color: var(--secondary);
   text-align: center;
   padding: 2em;
   font-weight: 500;
 }
 
-.benefits {
+.technologies {
   display: flex;
   justify-content: space-around;
   padding: 4em;
@@ -133,7 +133,7 @@
   margin: 0 auto;
 }
 
-.benefit {
+.technology {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -142,7 +142,7 @@
   color: var(--text-tertiary);
 }
 
-.benefit .benefit-img {
+.technology .technology-img {
   width: 250px;
   height: 250px;
   /* border-radius: 50%; */
@@ -151,20 +151,20 @@
   margin-bottom: 1em;
 }
 
-#benefit-1 {
+#technology-1 {
   background-image: url("../img/java-original.svg");
 }
 
-#benefit-2 {
+#technology-2 {
   background-image: url("../img/vuejs-original.svg");
 }
 
-#benefit-3 {
+#technology-3 {
   background-image: url("../img/postgresql-original.svg");
 }
 
-/* Event location */
-#location {
+/* Event formation */
+#formation {
   height: 400px;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("../img/logistica_banner.png");
@@ -176,7 +176,7 @@
   color: var(--text-color);
   margin-bottom: 3em;
 }
-#location2 {
+#formation2 {
   
   height: 400px;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
@@ -191,7 +191,7 @@
 }
 
 #address,
-#about-location {
+#about-formation {
   max-width: 30%;
 }
 
@@ -210,14 +210,14 @@
   font-size: 1.3em;
 }
 
-#about-location h3 {
+#about-formation h3 {
   color: var(--primary);
   font-size: 2.5em;
   margin-bottom: 1em;
   text-transform: uppercase;
 }
 
-#about-location p {
+#about-formation p {
   line-height: 1.5em;
 }
 
@@ -272,7 +272,7 @@
 }
 
 /* Call to Action Section */
-#cta {
+#contact {
   height: 300px;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
 url("https://images.unsplash.com/photo-1602576666092-bf6447a729fc?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=6000");
@@ -285,26 +285,26 @@ url("https://images.unsplash.com/photo-1602576666092-bf6447a729fc?ixlib=rb-4.0.3
   text-align: center;
   color: var(--text-color);
 }
-#cta div{
+#contact div{
   display: flex;width: 50%;margin: 0 auto;
 }
-#cta div div{
+#contact div div{
   width: 50%;
 }
 
-#cta h3 {
+#contact h3 {
   margin-bottom: 1.2em;
   font-size: 2em;
   font-weight: 500;
 }
 
-#cta .btn {
+#contact .btn {
   width: 30%;
   margin: 0 auto;
   font-weight: 600;
   font-size: 1.2em;
 }
-#cta .contato{
+#contact .contato{
   width: 100%;
   margin: 0 5px ;
   text-decoration: none;
@@ -333,19 +333,27 @@ url("https://images.unsplash.com/photo-1602576666092-bf6447a729fc?ixlib=rb-4.0.3
   font-weight: bold;
 }
 
+/*  */
+@media (max-width: 1024px) {
+  #about{
+    color: red;
+    padding: 100px;
+  }
+}
+
 /* Mobile */
 @media (max-width: 450px) {
   /* Event form */
-  #event-subscription {
+  #introduction-section {
     flex-direction: column;
     height: auto;
   }
 
-  #disclaimer {
+  #about {
     padding: 2em;
   }
 
-  #disclaimer h2 {
+  #about h2 {
     margin-bottom: 0.5em;
   }
 
@@ -354,21 +362,21 @@ url("https://images.unsplash.com/photo-1602576666092-bf6447a729fc?ixlib=rb-4.0.3
     margin-bottom: 2em;
   }
 
-  /* Benefits section */
-  .benefits {
+  /* technologies section */
+  .technologies {
     flex-direction: column;
     align-items: center;
     width: auto;
     padding: 2em;
   }
 
-  .benefit {
+  .technology {
     max-width: 100%;
     margin-bottom: 2em;
   }
 
-  /* Event location */
-  #location , #location2 {
+  /* Event formation */
+  #formation , #formation2 {
     flex-direction: column;
     height: auto;
     text-align: center;
@@ -385,16 +393,16 @@ url("https://images.unsplash.com/photo-1602576666092-bf6447a729fc?ixlib=rb-4.0.3
     margin: 0.3em 0;
   }
 
-  #about-location {
+  #about-formation {
     order: 1;
     max-width: 100%;
   }
 
-  #about-location h3 {
+  #about-formation h3 {
     margin-bottom: 0;
   }
 
-  #about-location p {
+  #about-formation p {
     display: none;
   }
 
@@ -427,7 +435,7 @@ url("https://images.unsplash.com/photo-1602576666092-bf6447a729fc?ixlib=rb-4.0.3
   }
 
   /* Call to Action Section */
-  #cta .btn {
+  #contact .btn {
     width: 80%;
   }
 }
